# TAI-Shazam

./: CMakeLists.txt  LICENSE  README  README.md  SNR-Results.txt  cluster.h  kMeans.h  point.h  wavcb.cpp  wavcb.h  wavcmp.cpp  wavcp.cpp  wavhist.h
bin-example/: wavcmp  wavcp  wavhist  wavquant
codebooks/codebooks-150-2500/: 3 Doors Down-Away From The Sun.codebook  3 Doors Down-Citizen Soldier.codebook  Acceptance-Different.codebook  Amy Shark-Adore.codebook  Amy Shark-Drive You Mad.codebook  Chippie-Consciência Pesada.codebook  Chippie-Manter Alone.codebook  Chippie-O Memo Boy.codebook  Mike Shinoda-Ghosts.codebook  Numb.codebook
executables/: wavcb  wavcmp  wavcp  wavfind  wavhist  wavquant
programs/: CMakeLists.txt  cluster.h  kMeans.h  point.h  wavcb.cpp  wavcb.h  wavcmp.h  wavfind.cpp  wavfind.h  wavhist.cpp  wavhist.h  wavquant.cpp
programs/executables/: wavcb  wavcp  wavfind
programs/results/: hist_dump.tsv
